# swarm

./: .gitignore  DEMO.md  MARKETING.md  POST_NOW.md  README.md  SOCIAL_CONTENT.md  USAGE.md  pyproject.toml  test_basic.py
demos/: README.md  multinode_demo.py  quickstart.py  terminal_examples.sh  visualize_cluster.py
exo/: __init__.py  cli.py
exo/discovery/: __init__.py  service.py
exo/inference/: coordinator.py
exo/node/: __init__.py  node.py
swarm/: __init__.py  cli.py
swarm/discovery/: __init__.py  service.py
swarm/inference/: coordinator.py
swarm/node/: __init__.py  node.py
